test/trivial/vass/pragma-error-unused-2.chpl
pragma "this pragma does not apply to any symbols"
writeln();
